--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -25,6 +25,9 @@ spring:
       host: 127.0.0.1
       port: 6379
 
+  main:
+    allow-bean-definition-overriding: true
+
 logging:
   level:
     root: info
