finish open api

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -12,6 +12,7 @@ spring:
     import:
       - application-mysql.yml
       - application-jwt.yml
+      - application-openapi.yml
 
   jpa:
     hibernate:
